[gd_scene load_steps=14 format=3 uid="uid://bjd1t3e7dfjtk"]

[ext_resource type="PackedScene" uid="uid://dim7nxbc1pklu" path="res://scenes/scn_overworld_tiles.tscn" id="1_ff76o"]
[ext_resource type="Script" uid="uid://bq2lsgxi2trj5" path="res://scenes/cutscene/scr_intro.gd" id="1_lcxob"]
[ext_resource type="PackedScene" uid="uid://dutagwpfyc38h" path="res://scenes/decor/scn_overworld_car.tscn" id="2_6a7ua"]
[ext_resource type="PackedScene" uid="uid://ekxwo70dmot1" path="res://scenes/tech/scn_camera.tscn" id="3_lb5fr"]
[ext_resource type="Theme" uid="uid://wknpxv3x21lw" path="res://resources/thm_main_ui.tres" id="5_vttp0"]
[ext_resource type="Texture2D" uid="uid://u4wi42685ktd" path="res://sprites/gui/spr_logo.png" id="6_ectdq"]
[ext_resource type="Texture2D" uid="uid://du6e35jk4faus" path="res://sprites/cutscene/spr_intro_1.png" id="7_lci3t"]

[sub_resource type="Animation" id="Animation_odaft"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UiGroup/UI/Logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UiGroup/UI/Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UiGroup:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UiGroup/UI/Logo:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UiGroup/UI/Title:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UiGroup/UI/CarRide:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("UiGroup/UI/CarRide:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1jsoh"]
resource_name = "default"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UiGroup/UI/Logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UiGroup/UI/Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UiGroup:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UiGroup/UI/Title:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UiGroup/UI/Logo:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UiGroup/UI/CarRide:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1dcq4"]
resource_name = "part2"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UiGroup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UiGroup/UI/Logo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UiGroup/UI/Title:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UiGroup/UI/CarRide:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lgcxv"]
resource_name = "part3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UiGroup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UiGroup/UI/CarRide:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_iht8l"]
resource_name = "part4"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UiGroup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7w5v"]
_data = {
&"RESET": SubResource("Animation_odaft"),
&"default": SubResource("Animation_1jsoh"),
&"part2": SubResource("Animation_1dcq4"),
&"part3": SubResource("Animation_lgcxv"),
&"part4": SubResource("Animation_iht8l")
}

[node name="Intro" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_lcxob")

[node name="OverworldTiles" parent="." instance=ExtResource("1_ff76o")]
layer_0/tile_data = PackedInt32Array(1048583, 0, 0, 983047, 0, 0, 917511, 0, 0, 851975, 0, 0, 786439, 0, 0, 720903, 0, 0, 655367, 0, 0, 589831, 0, 0, 524295, 0, 0, 458759, 0, 0, 393223, 0, 0, 327687, 0, 0, 262151, 0, 0, 196615, 0, 0, 131079, 0, 0, 65543, 0, 0, 7, 0, 0, -65529, 0, 0, -131065, 0, 0, -196601, 0, 0, -262137, 0, 0, -327673, 0, 0, -393209, 0, 0, -458745, 0, 0, -524281, 0, 0, -589817, 0, 0, -655353, 0, 0, -720889, 0, 0, -786425, 0, 0, 1048582, 0, 0, 983046, 0, 0, 917510, 0, 0, 851974, 0, 0, 786438, 0, 0, 720902, 0, 0, 655366, 0, 0, 589830, 0, 0, 524294, 0, 0, 458758, 0, 0, 393222, 0, 0, 327686, 0, 0, 262150, 0, 0, 196614, 0, 0, 131078, 0, 0, 65542, 0, 0, 6, 0, 0, -65530, 0, 0, -131066, 0, 0, -196602, 0, 0, -262138, 0, 0, -327674, 0, 0, -393210, 0, 0, -458746, 0, 0, -524282, 0, 0, -589818, 0, 0, -655354, 0, 0, -720890, 0, 0, -786426, 0, 0, 1048581, 0, 0, 983045, 0, 0, 917509, 0, 0, 851973, 0, 0, 786437, 0, 0, 720901, 0, 0, 655365, 0, 0, 589829, 0, 0, 524293, 0, 0, 458757, 0, 0, 393221, 0, 0, 327685, 0, 0, 262149, 0, 0, 196613, 0, 0, 131077, 0, 0, 65541, 0, 0, 5, 0, 0, -65531, 0, 0, -131067, 0, 0, -196603, 0, 0, -262139, 0, 0, -327675, 0, 0, -393211, 0, 0, -458747, 0, 0, -524283, 0, 0, -589819, 0, 0, -655355, 0, 0, -720891, 0, 0, -786427, 0, 0, 1048580, 0, 0, 983044, 0, 0, 917508, 0, 0, 851972, 0, 0, 786436, 0, 0, 720900, 0, 0, 655364, 0, 0, 589828, 0, 0, 524292, 0, 0, 458756, 0, 0, 393220, 0, 0, 327684, 0, 0, 262148, 0, 0, 196612, 0, 0, 131076, 0, 0, 65540, 0, 0, 4, 0, 0, -65532, 0, 0, -131068, 0, 0, -196604, 0, 0, -262140, 0, 0, -327676, 0, 0, -393212, 0, 0, -458748, 0, 0, -524284, 0, 0, -589820, 0, 0, -655356, 0, 0, -720892, 0, 0, -786428, 0, 0, 1048579, 0, 0, 983043, 0, 0, 917507, 0, 0, 851971, 0, 0, 786435, 0, 0, 720899, 0, 0, 655363, 0, 0, 589827, 0, 0, 524291, 0, 0, 458755, 0, 0, 393219, 0, 0, 327683, 0, 0, 262147, 0, 0, 196611, 0, 0, 131075, 0, 0, 65539, 0, 0, 3, 0, 0, -65533, 0, 0, -131069, 0, 0, -196605, 0, 0, -262141, 0, 0, -327677, 0, 0, -393213, 0, 0, -458749, 0, 0, -524285, 0, 0, -589821, 0, 0, -655357, 0, 0, -720893, 0, 0, -786429, 0, 0, 1048578, 0, 0, 983042, 0, 0, 917506, 0, 0, 851970, 0, 0, 786434, 0, 0, 720898, 0, 0, 655362, 0, 0, 589826, 0, 0, 524290, 0, 0, 458754, 0, 0, 393218, 0, 0, 327682, 0, 0, 262146, 0, 0, 196610, 0, 0, 131074, 0, 0, 65538, 0, 0, 2, 0, 0, -65534, 0, 0, -131070, 0, 0, -196606, 0, 0, -262142, 0, 0, -327678, 0, 0, -393214, 0, 0, -458750, 0, 0, -524286, 0, 0, -589822, 0, 0, -655358, 0, 0, -720894, 0, 0, -786430, 0, 0, 1048577, 0, 0, 983041, 0, 0, 917505, 0, 0, 851969, 0, 0, 786433, 0, 0, 720897, 0, 0, 655361, 0, 0, 589825, 0, 0, 524289, 0, 0, 458753, 0, 0, 393217, 0, 0, 327681, 0, 0, 262145, 0, 0, 196609, 0, 0, 131073, 0, 0, 65537, 0, 0, 1, 0, 0, -65535, 0, 0, -131071, 0, 0, -196607, 0, 0, -262143, 0, 0, -327679, 0, 0, -393215, 0, 0, -458751, 0, 0, -524287, 0, 0, -589823, 0, 0, -655359, 0, 0, -720895, 0, 0, -786431, 0, 0, 1048576, 0, 0, 983040, 0, 0, 917504, 0, 0, 851968, 0, 0, 786432, 0, 0, 720896, 0, 0, 655360, 0, 0, 589824, 0, 0, 524288, 0, 0, 458752, 0, 0, 393216, 0, 0, 327680, 0, 0, 262144, 0, 0, 196608, 0, 0, 131072, 0, 0, 65536, 0, 0, 0, 0, 0, -65536, 0, 0, -131072, 0, 0, -196608, 0, 0, -262144, 0, 0, -327680, 0, 0, -393216, 0, 0, -458752, 0, 0, -524288, 0, 0, -589824, 0, 0, -655360, 0, 0, -720896, 0, 0, -786432, 0, 0, 1114111, 0, 0, 1048575, 0, 0, 983039, 0, 0, 917503, 0, 0, 851967, 0, 0, 786431, 0, 0, 720895, 0, 0, 655359, 0, 0, 589823, 0, 0, 524287, 0, 0, 458751, 0, 0, 393215, 0, 0, 327679, 0, 0, 262143, 0, 0, 196607, 0, 0, 131071, 0, 0, 65535, 0, 0, -1, 0, 0, -65537, 0, 0, -131073, 0, 0, -196609, 0, 0, -262145, 0, 0, -327681, 0, 0, -393217, 0, 0, -458753, 0, 0, -524289, 0, 0, -589825, 0, 0, -655361, 0, 0, -720897, 0, 0, 1114110, 0, 0, 1048574, 0, 0, 983038, 0, 0, 917502, 0, 0, 851966, 0, 0, 786430, 0, 0, 720894, 0, 0, 655358, 0, 0, 589822, 0, 0, 524286, 0, 0, 458750, 0, 0, 393214, 0, 0, 327678, 0, 0, 262142, 0, 0, 196606, 0, 0, 131070, 0, 0, 65534, 0, 0, -2, 0, 0, -65538, 0, 0, -131074, 0, 0, -196610, 0, 0, -262146, 0, 0, -327682, 0, 0, -393218, 0, 0, -458754, 0, 0, -524290, 0, 0, -589826, 0, 0, -655362, 0, 0, -720898, 0, 0, 1114109, 0, 0, 1048573, 0, 0, 983037, 0, 0, 917501, 0, 0, 851965, 0, 0, 786429, 0, 0, 720893, 0, 0, 655357, 0, 0, 589821, 0, 0, 524285, 0, 0, 458749, 0, 0, 393213, 0, 0, 327677, 0, 0, 262141, 0, 0, 196605, 0, 0, 131069, 0, 0, 65533, 0, 0, -3, 0, 0, -65539, 0, 0, -131075, 0, 0, -196611, 0, 0, -262147, 0, 0, -327683, 0, 0, -393219, 0, 0, -458755, 0, 0, -524291, 0, 0, -589827, 0, 0, -655363, 0, 0, -720899, 0, 0, 1114108, 0, 0, 1048572, 0, 0, 983036, 0, 0, 917500, 0, 0, 851964, 0, 0, 786428, 0, 0, 720892, 0, 0, 655356, 0, 0, 589820, 0, 0, 524284, 0, 0, 458748, 0, 0, 393212, 0, 0, 327676, 0, 0, 262140, 0, 0, 196604, 0, 0, 131068, 0, 0, 65532, 0, 0, -4, 0, 0, -65540, 0, 0, -131076, 0, 0, -196612, 0, 0, -262148, 0, 0, -327684, 0, 0, -393220, 0, 0, -458756, 0, 0, -524292, 0, 0, -589828, 0, 0, -655364, 0, 0, -720900, 0, 0, 1114107, 0, 0, 1048571, 0, 0, 983035, 0, 0, 917499, 0, 0, 851963, 0, 0, 786427, 0, 0, 720891, 0, 0, 655355, 0, 0, 589819, 0, 0, 524283, 0, 0, 458747, 0, 0, 393211, 0, 0, 327675, 0, 0, 262139, 0, 0, 196603, 0, 0, 131067, 0, 0, 65531, 0, 0, -5, 0, 0, -65541, 0, 0, -131077, 0, 0, -196613, 0, 0, -262149, 0, 0, -327685, 0, 0, -393221, 0, 0, -458757, 0, 0, -524293, 0, 0, -589829, 0, 0, -655365, 0, 0, -720901, 0, 0, 1114106, 0, 0, 1048570, 0, 0, 983034, 0, 0, 917498, 0, 0, 851962, 0, 0, 786426, 0, 0, 720890, 0, 0, 655354, 0, 0, 589818, 0, 0, 524282, 0, 0, 458746, 0, 0, 393210, 0, 0, 327674, 0, 0, 262138, 0, 0, 196602, 0, 0, 131066, 0, 0, 65530, 0, 0, -6, 0, 0, -65542, 0, 0, -131078, 0, 0, -196614, 0, 0, -262150, 0, 0, -327686, 0, 0, -393222, 0, 0, -458758, 0, 0, -524294, 0, 0, -589830, 0, 0, -655366, 0, 0, -720902, 0, 0, 1114105, 0, 0, 1048569, 0, 0, 983033, 0, 0, 917497, 0, 0, 851961, 0, 0, 786425, 0, 0, 720889, 0, 0, 655353, 0, 0, 589817, 0, 0, 524281, 0, 0, 458745, 0, 0, 393209, 0, 0, 327673, 0, 0, 262137, 0, 0, 196601, 0, 0, 131065, 0, 0, 65529, 0, 0, -7, 0, 0, -65543, 0, 0, -131079, 0, 0, -196615, 0, 0, -262151, 0, 0, -327687, 0, 0, -393223, 0, 0, -458759, 0, 0, -524295, 0, 0, -589831, 0, 0, -655367, 0, 0, -720903, 0, 0, 1114104, 0, 0, 1048568, 0, 0, 983032, 0, 0, 917496, 0, 0, 851960, 0, 0, 786424, 0, 0, 720888, 0, 0, 655352, 0, 0, 589816, 0, 0, 524280, 0, 0, 458744, 0, 0, 393208, 0, 0, 327672, 0, 0, 262136, 0, 0, 196600, 0, 0, 131064, 0, 0, 65528, 0, 0, -8, 0, 0, -65544, 0, 0, -131080, 0, 0, -196616, 0, 0, -262152, 0, 0, -327688, 0, 0, -393224, 0, 0, -458760, 0, 0, -524296, 0, 0, -589832, 0, 0, -655368, 0, 0, -720904, 0, 0, 1114103, 0, 0, 1048567, 0, 0, 983031, 0, 0, 917495, 0, 0, 851959, 0, 0, 786423, 0, 0, 720887, 0, 0, 655351, 0, 0, 589815, 0, 0, 524279, 0, 0, 458743, 0, 0, 393207, 0, 0, 327671, 0, 0, 262135, 0, 0, 196599, 0, 0, 131063, 0, 0, 65527, 0, 0, -9, 0, 0, -65545, 0, 0, -131081, 0, 0, -196617, 0, 0, -262153, 0, 0, -327689, 0, 0, -393225, 0, 0, -458761, 0, 0, -524297, 0, 0, -589833, 0, 0, -655369, 0, 0, -720905, 0, 0)
layer_1/tile_data = PackedInt32Array(1048576, 262146, 2, 983040, 262146, 2, 917504, 262146, 2, 851968, 262146, 2, 786432, 262146, 2, 720896, 262146, 2, 655360, 262146, 2, 589824, 262146, 2, 524288, 262146, 2, 458752, 262146, 2, 393216, 262146, 2, 327680, 262146, 2, 262144, 262146, 2, 196608, 262146, 2, 131072, 262146, 2, 65536, 262146, 2, 0, 262146, 2, -65536, 262146, 2, -131072, 262146, 2, -196608, 262146, 2, -262144, 262146, 2, -327680, 262146, 2, -393216, 262146, 2, -458752, 262146, 2, -524288, 262146, 2, -589824, 262146, 2, -655360, 262146, 2, -720896, 262146, 2, -786432, 262146, 2, 1114111, 2, 2, 1048575, 2, 1, 983039, 2, 1, 917503, 2, 1, 851967, 2, 1, 786431, 2, 1, 720895, 2, 1, 655359, 2, 1, 589823, 2, 1, 524287, 2, 1, 458751, 2, 1, 393215, 2, 1, 327679, 2, 1, 262143, 2, 1, 196607, 2, 1, 131071, 2, 1, 65535, 2, 1, -1, 2, 1, -65537, 2, 1, -131073, 2, 1, -196609, 2, 1, -262145, 2, 1, -327681, 2, 1, -393217, 2, 1, -458753, 2, 1, -524289, 2, 1, -589825, 2, 1, -655361, 2, 1, -720897, 2, 0, 1114110, 262146, 2, 1048574, 262146, 2, 983038, 262146, 2, 917502, 262146, 2, 851966, 262146, 2, 786430, 262146, 2, 720894, 262146, 2, 655358, 262146, 2, 589822, 262146, 2, 524286, 262146, 2, 458750, 262146, 2, 393214, 262146, 1, 327678, 262146, 1, 262142, 262146, 1, 196606, 262146, 1, 131070, 262146, 1, 65534, 262146, 1, -2, 262146, 1, -65538, 262146, 1, -131074, 262146, 1, -196610, 262146, 1, -262146, 262146, 1, -327682, 262146, 1, -393218, 262146, 1, -458754, 262146, 2, -524290, 262146, 2, -589826, 262146, 2, -655362, 262146, 2, -720898, 262146, 2, -720899, 524290, 5, 1114109, 524290, 8, 1048573, 524290, 6, 983037, 524290, 6, 917501, 524290, 6, 851965, 524290, 6, 786429, 524290, 6, 720893, 524290, 6, 655357, 524290, 6, 589821, 524290, 6, 524285, 524290, 6, 458749, 524290, 6, 393213, 524290, 6, 327677, 524290, 6, 262141, 524290, 6, 196605, 524290, 6, 131069, 524290, 6, 65533, 524290, 6, -3, 524290, 6, -65539, 524290, 6, -131075, 524290, 6, -196611, 524290, 6, -262147, 524290, 6, -327683, 524290, 6, -393219, 524290, 6, -458755, 524290, 6, -524291, 524290, 6, -589827, 524290, 6, -655363, 524290, 6, -786431, 720898, 5, -720895, 720898, 7, -655359, 720898, 7, -589823, 720898, 7, -524287, 720898, 7, -458751, 720898, 7, -393215, 720898, 7, -327679, 720898, 7, -262143, 720898, 7, -196607, 720898, 7, -131071, 720898, 7, -65535, 720898, 7, 1, 720898, 7, 65537, 720898, 7, 131073, 720898, 7, 196609, 720898, 7, 262145, 720898, 7, 327681, 720898, 7, 393217, 720898, 7, 458753, 720898, 7, 524289, 720898, 7, 589825, 720898, 7, 655361, 720898, 7, 720897, 720898, 7, 786433, 720898, 7, 851969, 720898, 7, 917505, 720898, 7, 983041, 720898, 7, 1048577, 720898, 8, 1114112, 262146, 2, 1179646, 262146, 2)

[node name="ZermCar" parent="." instance=ExtResource("2_6a7ua")]
position = Vector2(-27, 2)
moves = false
disable_saving = true
color = Color(0.270588, 0.337255, 0.486275, 1)

[node name="Camera" parent="." instance=ExtResource("3_lb5fr")]
position = Vector2(-8, 0)

[node name="Trees" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Cars" type="Node2D" parent="."]
y_sort_enabled = true

[node name="UiGroup" type="CanvasGroup" parent="."]
z_index = 10
position = Vector2(-88, -60)

[node name="UI" type="Control" parent="UiGroup"]
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 120.0
theme = ExtResource("5_vttp0")

[node name="ColorRect" type="ColorRect" parent="UiGroup/UI"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0, 0, 0, 1)

[node name="Logo" type="Sprite2D" parent="UiGroup/UI"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(80, 48)
texture = ExtResource("6_ectdq")

[node name="Title" type="Label" parent="UiGroup/UI"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 76.0
offset_top = 83.0
offset_right = 91.0
offset_bottom = 94.0
text = "rpg"

[node name="CarRide" type="Sprite2D" parent="UiGroup/UI"]
visible = false
position = Vector2(0, 24)
texture = ExtResource("7_lci3t")
centered = false

[node name="BeginningAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s7w5v")
}
autoplay = "default"
